--- a/resources/language/German/strings.xml
+++ b/resources/language/German/strings.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <strings>
-    <!-- Addon Settings Categories -->
+    <!-- Addon Login Settings -->
     <string id="30100">Local Library</string>
-    <!-- Addon Settings -->
-	<string id="30101">E-Mail-Adresse</string>
-	<string id="30102">Passwort</string>
+    <string id="30101">E-Mail-Adresse</string>
+    <string id="30102">Passwort</string>
+    <!-- Addon Quality Settings -->
+    <string id="30200">Qualitätseinstellungen</string>
+    <string id="30201">HD Version bevorzugen</string>
+    <string id="30202">HQ Version bevorzugen</string>
+    <string id="30203">Geschnittene Version bevorzugen</string>
     <!-- Message strings -->
     <string id="30300">Bitte konfigurieren sie ihren OTR Zugang im OTR Addon Setup</string>
     <string id="30301">OTR login Fehlgeschlagen (%s)</string>
