recording list contextmenue

--- a/resources/language/German/strings.xml
+++ b/resources/language/German/strings.xml
@@ -16,4 +16,6 @@
     <string id="30303">Aufnahmen</string>
     <string id="30304">Archiv</string>
     <string id="30305">Löschen</string>
+    <string id="30306">Abspielen</string>
+    <string id="30307">Auflistung Aktualisieren</string>
 </strings>
