--- a/resources/language/English/strings.xml
+++ b/resources/language/English/strings.xml
@@ -16,4 +16,6 @@
     <string id="30303">Recordings</string>
     <string id="30304">Archive</string>
     <string id="30305">Delete</string>
+    <string id="30306">Play</string>
+    <string id="30307">Refresh Listing</string>
 </strings>
