--- a/resources/language/English/strings.xml
+++ b/resources/language/English/strings.xml
@@ -21,4 +21,5 @@
     <string id="30308">Userinfo</string>
     <string id="30309">Status: %s (until %s)</string>
     <string id="30310">Decodings left: %s, GWP left: %s</string>
+    <string id="30311">Loading recording list failed (%s)</string>
 </strings>
