--- a/resources/language/German/strings.xml
+++ b/resources/language/German/strings.xml
@@ -21,4 +21,5 @@
     <string id="30308">Benutzerinformationen</string>
     <string id="30309">Status: %s (bis %s)</string>
     <string id="30310">Decodings verfügbar: %s, GWP verfügbar: %s</string>
+    <string id="30311">Laden der Aufnahmeliste fehlgeschlagen (%s)</string>
 </strings>
