--- a/resources/language/German/strings.xml
+++ b/resources/language/German/strings.xml
@@ -22,4 +22,5 @@
     <string id="30309">Status: %s (bis %s)</string>
     <string id="30310">Decodings verfügbar: %s, GWP verfügbar: %s</string>
     <string id="30311">Laden der Aufnahmeliste fehlgeschlagen (%s)</string>
+    <string id="30312">Neue Addon-Version Verfügbar! Update auf http://j.mp/xbmc-otr ...</string>
 </strings>
