highlights of the last days

--- a/resources/language/English/strings.xml
+++ b/resources/language/English/strings.xml
@@ -30,4 +30,5 @@
     <string id="30317">Schedule Job?</string>
     <string id="30318">Job successful scheduled</string>
     <string id="30319">Job even exists</string>
+    <string id="30320">Highlights of the last days</string>
 </strings>
