--- a/resources/language/German/strings.xml
+++ b/resources/language/German/strings.xml
@@ -30,4 +30,5 @@
     <string id="30317">Auftrag anlegen?</string>
     <string id="30318">Auftrag erfolgreich angelegt</string>
     <string id="30319">Auftrag bereits vorhanden</string>
+    <string id="30320">Highlights der letzten Tage</string>
 </strings>
