--- a/resources/language/English/strings.xml
+++ b/resources/language/English/strings.xml
@@ -31,4 +31,6 @@
     <string id="30318">Job successful scheduled</string>
     <string id="30319">Job even exists</string>
     <string id="30320">Highlights of the last days</string>
+    <string id="30321">Downloadqueue</string>
+    <string id="30322">Position: %s</string>
 </strings>
