--- a/resources/language/German/strings.xml
+++ b/resources/language/German/strings.xml
@@ -5,10 +5,13 @@
     <string id="30101">E-Mail-Adresse</string>
     <string id="30102">Passwort</string>
     <!-- Addon Quality Settings -->
-    <string id="30200">Qualitätseinstellungen</string>
+    <string id="30200">Qualität</string>
     <string id="30201">HD Version bevorzugen</string>
     <string id="30202">HQ Version bevorzugen</string>
     <string id="30203">Geschnittene Version bevorzugen</string>
+    <!-- Addon Download Settings -->
+    <string id="30500">Download</string>
+    <string id="30501">Priority-Download bevorzugen</string>
     <!-- Message strings -->
     <string id="30300">Bitte konfigurieren sie ihren OTR Zugang im OTR Addon Setup</string>
     <string id="30301">OTR login Fehlgeschlagen (%s)</string>
