--- a/resources/language/German/strings.xml
+++ b/resources/language/German/strings.xml
@@ -35,5 +35,6 @@
     <string id="30319">Auftrag bereits vorhanden</string>
     <string id="30320">Highlights der letzten Tage</string>
     <string id="30321">Downloadwarteschlange</string>
-    <string id="30322">Position: %s</string>
+    <string id="30322">Position: %s von %s</string>
+    <string id="30323">Nächster Versuch in %s Sekunden.</string>
 </strings>
