* aktualisieren einzelner elemente / der ganzen Liste * cache zeit verkürzt

--- a/resources/language/German/strings.xml
+++ b/resources/language/German/strings.xml
@@ -39,4 +39,5 @@
     <string id="30323">Nächster Versuch in %s Sekunden.</string>
     <string id="30324">Auftrag Löschen?</string>
     <string id="30325">Auftrag gelöscht</string>
+    <string id="30326">Auftrag aktualisieren</string>
 </strings>
