--- a/resources/language/English/strings.xml
+++ b/resources/language/English/strings.xml
@@ -40,4 +40,5 @@
     <string id="30323">Next try in %s seconds.</string>
     <string id="30324">Delete job?</string>
     <string id="30325">Job deleted</string>
+    <string id="30326">Refresh Job</string>
 </strings>
