--- a/resources/language/German/strings.xml
+++ b/resources/language/German/strings.xml
@@ -8,10 +8,12 @@
     <string id="30103">Vor dem Löschen von Aufträgen fragen</string>
     <!-- Addon Quality Settings -->
     <string id="30200">Qualität</string>
-    <string id="30201">HD Version bevorzugen</string>
-    <string id="30202">HQ Version bevorzugen</string>
-    <string id="30203">Geschnittene Version bevorzugen</string>
+    <string id="30201">HD Version in der Vorauswahl bevorzugen</string>
+    <string id="30202">HQ Version in der Vorauswahl bevorzugen</string>
+    <string id="30203">Geschnittene Version in der Vorauswahl bevorzugen</string>
     <string id="30204">Priority-Download bevorzugen</string>
+    <string id="30205">AVI-Dateien in Vorauswahl einbeziehen</string>
+    <string id="30206">Nicht unterstützte Formate anzeigen (NICHT empfohlen)</string>
     <!-- Message strings -->
     <string id="30300">Bitte konfigurieren sie ihren OTR Zugang im OTR Addon Setup</string>
     <string id="30301">OTR login Fehlgeschlagen (%s)</string>
