--- a/resources/language/German/strings.xml
+++ b/resources/language/German/strings.xml
@@ -23,7 +23,7 @@
     <string id="30304">Archiv</string>
     <string id="30305">Löschen</string>
     <string id="30306">Abspielen</string>
-    <string id="30307">Auflistung Aktualisieren</string>
+    <string id="30307">Auflistung aktualisieren</string>
     <string id="30308">Benutzerinformationen</string>
     <string id="30309">Status: %s (bis %s)</string>
     <string id="30310">Decodings verfügbar: %s, GWP verfügbar: %s</string>
