--- a/resources/language/English/strings.xml
+++ b/resources/language/English/strings.xml
@@ -21,7 +21,7 @@
     <string id="30302">Loading recording list</string>
     <string id="30303">Recordings</string>
     <string id="30304">Archive</string>
-    <string id="30305">Delete</string>
+    <string id="30305">Delete Recording</string>
     <string id="30306">Play</string>
     <string id="30307">Refresh Listing</string>
     <string id="30308">Userinfo</string>
