--- a/resources/language/English/strings.xml
+++ b/resources/language/English/strings.xml
@@ -17,7 +17,7 @@
     <string id="30206">Show unsupported formats (NOT recommend)</string>
     <!-- Message strings -->
     <string id="30300">Please set your OTR login in Addon Setup</string>
-    <string id="30301">OTR Login Failed (%s)</string>
+    <string id="30301">OTR Login Failed</string>
     <string id="30302">Loading recording list</string>
     <string id="30303">Recordings</string>
     <string id="30304">Archive</string>
@@ -44,4 +44,5 @@
     <string id="30325">Job deleted</string>
     <string id="30326">Refresh Job</string>
     <string id="30327">Streamselection</string>
+    <string id="30328">Connection timeout, try again later.</string>
 </strings>
