--- a/resources/language/German/strings.xml
+++ b/resources/language/German/strings.xml
@@ -17,7 +17,7 @@
     <string id="30206">Nicht unterstützte Formate anzeigen (NICHT empfohlen)</string>
     <!-- Message strings -->
     <string id="30300">Bitte konfigurieren sie ihren OTR Zugang im OTR Addon Setup</string>
-    <string id="30301">OTR login Fehlgeschlagen (%s)</string>
+    <string id="30301">OTR login Fehlgeschlagen</string>
     <string id="30302">Lade Aufnahmeliste</string>
     <string id="30303">Aufnahmen</string>
     <string id="30304">Archiv</string>
@@ -44,4 +44,5 @@
     <string id="30325">Auftrag gelöscht</string>
     <string id="30326">Aufnahme aktualisieren</string>
     <string id="30327">Streamauswahl</string>
+    <string id="30328">Zeitüberschreitung, bitte probier's später nocheinmal.</string>
 </strings>
