--- a/resources/language/German/strings.xml
+++ b/resources/language/German/strings.xml
@@ -45,4 +45,25 @@
     <string id="30326">Aufnahme aktualisieren</string>
     <string id="30327">Streamauswahl</string>
     <string id="30328">Zeitüberschreitung, bitte probier's später nocheinmal.</string>
+    <string id="30329">Montag</string>
+    <string id="30330">Dienstag</string>
+    <string id="30331">Mittwoch</string>
+    <string id="30332">Donnerstag</string>
+    <string id="30333">Freitag</string>
+    <string id="30334">Samstag</string>
+    <string id="30335">Sonntag</string>
+    <string id="30336">Januar</string>
+    <string id="30337">Februar</string>
+    <string id="30338">März</string>
+    <string id="30339">April</string>
+    <string id="30340">Mai</string>
+    <string id="30341">Juni</string>
+    <string id="30342">Juli</string>
+    <string id="30343">August</string>
+    <string id="30344">September</string>
+    <string id="30345">Oktober</string>
+    <string id="30346">November</string>
+    <string id="30347">Dezember</string>
+    <string id="30348">%s Wochen</string>
+    <string id="30349">Fernsehprogramm</string>
 </strings>
