--- a/resources/language/English/strings.xml
+++ b/resources/language/English/strings.xml
@@ -15,6 +15,8 @@
     <string id="30204">Prefer Priority-Download</string>
     <string id="30205">Include AVI-files in preselection</string>
     <string id="30206">Show unsupported formats (NOT recommend)</string>
+    <string id="30106">Hidden channels (tv guide)</string>
+    <string id="30107">Hidden languages (tv guide)</string>
     <!-- Message strings -->
     <string id="30300">Please set your OTR login in Addon Setup</string>
     <string id="30301">OTR Login Failed</string>
@@ -67,4 +69,9 @@
     <string id="30348">%s weeks</string>
     <string id="30349">%s week</string>
     <string id="30350">TV guide</string>
+    <string id="30351">Show all Channels</string>
+    <string id="30352">Hide Channel (%s)</string>
+    <string id="30353">Show Channel (%s)</string>
+    <string id="30354">Hide Language (%s)</string>
+    <string id="30355">Show Language (%s)</string>
 </strings>
