bugfix otrsubcode_refreshtime, sortierng bei scheduling, programmieren von aufnahmen im tv guide

--- a/resources/language/German/strings.xml
+++ b/resources/language/German/strings.xml
@@ -43,7 +43,7 @@
     <string id="30322">Position: %s von %s</string>
     <string id="30323">Nächster Versuch in %s Sekunden.</string>
     <string id="30324">Auftrag Löschen?</string>
-    <string id="30325">Auftrag gelöscht</string>
+    <string id="30325">Auftrag entfernt</string>
     <string id="30326">Aufnahme aktualisieren</string>
     <string id="30327">Streamauswahl</string>
     <string id="30328">Zeitüberschreitung, bitte probier's später nocheinmal.</string>
