tage im tvguide springen

--- a/resources/language/English/strings.xml
+++ b/resources/language/English/strings.xml
@@ -74,4 +74,6 @@
     <string id="30353">Show Channel (%s)</string>
     <string id="30354">Hide Language (%s)</string>
     <string id="30355">Show Language (%s)</string>
+    <string id="30356">Day before</string>
+    <string id="30357">Day after</string>
 </strings>
