--- a/resources/language/German/strings.xml
+++ b/resources/language/German/strings.xml
@@ -74,4 +74,6 @@
     <string id="30353">Zeige Kanal (%s)</string>
     <string id="30354">Verstecke Sprache (%s)</string>
     <string id="30355">Zeige Sprache (%s)</string>
+    <string id="30356">vorheriger Tag</string>
+    <string id="30357">folgender Tag</string>
 </strings>
