--- a/resources/language/English/strings.xml
+++ b/resources/language/English/strings.xml
@@ -30,7 +30,7 @@
     <string id="30309">Status: %s (until %s)</string>
     <string id="30310">Decodings left: %s, GWP left: %s</string>
     <string id="30311">Loading recording list failed.</string>
-    <string id="30312">New Addon-Version Available! Update at http://j.mp/xbmc-otr ...</string>
+    <string id="30312">New Addon-Version Available!</string>
     <string id="30313">Search</string>
     <string id="30314">Scheduling</string>
     <string id="30315">Search past recordings</string>
