--- a/resources/language/German/strings.xml
+++ b/resources/language/German/strings.xml
@@ -30,7 +30,7 @@
     <string id="30309">Status: %s (bis %s)</string>
     <string id="30310">Decodings verfügbar: %s, GWP verfügbar: %s</string>
     <string id="30311">Laden der Aufnahmeliste fehlgeschlagen.</string>
-    <string id="30312">Neue Addon-Version Verfügbar! Update auf http://j.mp/xbmc-otr ...</string>
+    <string id="30312">Neue Addon-Version Verfügbar!</string>
     <string id="30313">Suche</string>
     <string id="30314">Planung</string>
     <string id="30315">Vergangene Aufnahmen suchen</string>
