cache version erhoeht cache leeren durch funktionsaufruf ersetzt abspielen nach dem download download ordner anpassen übersetzungen

--- a/resources/language/English/strings.xml
+++ b/resources/language/English/strings.xml
@@ -17,6 +17,8 @@
     <string id="30206">Show unsupported formats (NOT recommend)</string>
     <string id="30106">Hidden channels (tv guide)</string>
     <string id="30107">Hidden languages (tv guide)</string>
+    <string id="30108">Play File after Download</string>
+    <string id="30109">Local Download Folder</string>
     <!-- Message strings -->
     <string id="30300">Please set your OTR login in Addon Setup</string>
     <string id="30301">OTR Login Failed</string>
@@ -76,4 +78,14 @@
     <string id="30355">Show Language (%s)</string>
     <string id="30356">Day before</string>
     <string id="30357">Day after</string>
+    <string id="30358">Download</string>
+    <string id="30359">Downloadselection</string>
+    <string id="30360">Download canceled</string>
+    <string id="30361">local copy</string>
+    <string id="30362">Delete local copys</string>
+    <string id="30363">File already exists, overwrite?</string>
+    <string id="30364">Download completed, play now?</string>
+    <string id="30365">Do you want do delete existing local copys?</string>
+    <string id="30366">Skipped file (Operation not permitted)</string>
+    <string id="30367">Skipped file (No such file or directory)</string>
 </strings>
